# bin2c

./: bin2c.c  meson.build
